--- a/docs/final-report/goal.tex
+++ b/docs/final-report/goal.tex
@@ -8,16 +8,16 @@ Przed rozpoczęciem pracy przyjęto, że:
   \item Kanały gry mogą być chronione hasłem.
   \item Podczas jednej rozgrywki można jednocześnie grać co najwyżej w szóstkę.
   \item Interfejs użytkownika zostanie zaimplementowany w postaci asynchronicznej strony WWW z wykorzystaniem technologii HTML5\footnote{\url{http://www.w3.org/TR/html5/}} (canvas, WebSockets).
-  \item Część serwerowa (\emph{backend}) zostanie zaimplementowa korzystając z języka \emph{Common Lisp} w implementacji Steel Bank Common Lisp\footnote{\url{http://www.sbcl.org/}}.
+  \item Część serwerowa (\emph{backend}) zostanie zaimplementowana korzystając z języka \emph{Common Lisp} w implementacji Steel Bank Common Lisp\footnote{\url{http://www.sbcl.org/}}.
 \end{itemize}
 
-Dodtkowo, ze względu na ograniczony czas przyjęto, że:
+Dodatkowo, ze względu na ograniczony czas przyjęto, że:
 \begin{itemize}
   \item W przeciwieństwie do HaxBall, gracze, nie mogą wymieniać się wiadomościami podczas rozgrywki.
-  \item Brak tzn. \emph{lobby} czyli poczekalni dla graczy przed ukończeniem rundy - gracz jest umieszczany odrazu w centru rozgrywki.
+  \item Brak tzn. \emph{lobby} czyli poczekalni dla graczy przed ukończeniem rundy - gracz jest umieszczany od razu w centrum rozgrywki.
 \end{itemize}
 
-Ze względu na widoczny podział projektu na dwie duże cześci - interfejs użytkownika(\emph{frontend}) i część serwerową (\emph{backend}) podział prac był dość łatwy. Tabela \ref{tab:podzia} przedstawia przydział prac poszczególnym członką grupy.
+Ze względu na widoczny podział projektu na dwie duże części - interfejs użytkownika(\emph{frontend}) i część serwerową (\emph{backend}) podział prac był dość łatwy. Tabela \ref{tab:podzia} przedstawia przydział prac poszczególnym członkom grupy.
 
 \begin{table}[h]
   \centering
@@ -27,7 +27,7 @@ Ze względu na widoczny podział projektu na dwie duże cześci - interfejs uży
     Bujok Mikołaj &
 
     Projektowanie grafiki, praca nad interfejsem użytkownika.\\
-    Kubiak Jakub & Praca nad częścią serwerową,  kordynacja projektu.\\
+    Kubiak Jakub & Praca nad częścią serwerową, koordynacja projektu.\\
     Miękus Szymon & Praca nad animacją interfejsu użytkownika, rozwijanie testów interfejsu użytkownika. \\
     Nikodem Adrian &  Praca nad częścią serwerową, testy części serwerowej.\\
     \hline
