--- a/docs/final-report/usage.tex
+++ b/docs/final-report/usage.tex
@@ -1,1 +1,44 @@
 \section{Użytkowanie}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/login.png}
+    \caption{Logowanie.}
+    \label{fig:login}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/register.png}
+    \caption{Rejestracja.}
+    \label{fig:register}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/error.png}
+    \caption{Przykładowy błąd}
+    \label{fig:error-example}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/beforeCreation.png}
+    \caption{Login zone.}
+    \label{fig:zone}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/twoChannels.png}
+    \caption{Dwa kanaly.}
+    \label{fig:chans}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{imgs/gameView.png}
+    \caption{Widok rozgrywki}
+    \label{fig:game}
+\end{figure}
+
+
