--- a/docs/final-report/summary.tex
+++ b/docs/final-report/summary.tex
@@ -1,1 +1,7 @@
 \section{Podsumowanie}
+Praca zespołowa zdecydowanie przyczyniła się do szybkiego zaimplementowania projektu. Wspólna praca nie tylko pozwoliła na wymianę doświadczeń, ale również umożliwiła nam dopracowanie warsztatu. Podczas pracy zastosowano popularną w firmach programistycznych metodę polegającą na uprzednim sprawdzeniu kodu przez innego programistę przed włączeniem go do gałęzi (\emph{code review}). Dzięki temu, popełniane przez nas błędy zostawały wskazywane po to, aby nie popełniać ich w przyszłości.
+
+Podczas prac udało się zrealizować wszystkie cele, jednak system nadal można usprawnić o polepszoną grafikę, udźwiękowianie oraz poprawioną wydajność.
+
+Podsumowując, praca zespołowa przyczynia się nie tylko do przyspieszenia procesu wytwarzania oprogramowania, ale również pozwala na lepszy i automatyczny rozwój umiejętności współpracowników.
+\pagebreak
